# dominant_colours

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml  upload_binaries.yml
scripts/: README.md  dominant_slices.py  requirements.in  requirements.txt
src/: cli.rs  colour_output.rs  find_dominant_colors.rs  get_bytes.rs  get_image_colors.rs  main.rs  models.rs  printing.rs  terminal_colours.rs
src/tests/: README.md  crossness.avif  green.tiff  orange.heic
webapp/: README.md  requirements.in  requirements.txt  server.py  start.sh
webapp/static/: style.css
webapp/templates/: base.html  index.html  palette.html
