[package]
name = "dominant_colours"
version = "1.4.1"
edition = "2018"

[dependencies]
assert_cmd = "2.0.17"
clap = { version = "4.5.35", features = ["derive"] }
image-webp = "0.2.1"
predicates = "3"

[dependencies.kmeans_colors]
version = "0.7.0"
features = ["palette_color"]
default-features = false

[dependencies.image]
version = "0.25"
features = ["jpeg", "png", "gif", "tiff", "webp"]
default-features = false

[dependencies.palette]
version = "0.7"
default-features = false
features = ["std"]
