[package]
name = "dominant_colours"
version = "1.5.0"
edition = "2018"

[dependencies]
assert_cmd = "2.0.17"
clap = { version = "4.5.49", features = ["derive"] }
image-webp = "0.2.4"
predicates = "3"

[dependencies.kmeans_colors]
version = "0.7.1"
features = ["palette_color"]
default-features = false

[dependencies.image]
version = "0.25"
features = ["default-formats", "avif-native"]
default-features = false

[dependencies.palette]
version = "0.7"
default-features = false
features = ["std"]
